--- a/about.html
+++ b/about.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/9cfd8f728d.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about.css" />
     <title>AMIMUN'22 | Home</title>
@@ -17,33 +20,45 @@
   <body>
     <div id="back">
       <nav>
-        <ul class="links">
-          <li><a href="./about.html">About</a></li>
-          <li class="test">
-            <a href="#">Our Team</a>
-            <div class="sub-menu-1">
-              <ul>
-                <li><a href="">Our Guiding Light</a></li>
-                <li><a href="">Advisory Board</a></li>
-                <li><a href="">Secretariat</a></li>
-                <li><a href="">Organising Committee</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a href="./messages.html">Messages</a></li>
-          <li><a href="./committes.html">Committees</a></li>
-        </ul>
+        <div class="menu-bar">
+          <ul>
+            <li><a href="./about.html">About</a></li>
+            <li>
+              Our Team <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li><a href="./our-team/guiding-light.html">Our Guiding Light</a></li>
+                  <li><a href="./our-team/advisory-board.html">Advisory Board</a></li>
+                  <li><a href="./our-team/secretariate.html">Secretariat</a></li>
+                  <li><a href="./our-team/org-committee.html">Organising Committee</a></li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="./messages.html">Messages</a></li>
+            <li><a href="./committes.html">Committees</a></li>
+          </ul>
+        </div>
         <div id="logo">
           <a href="./index.html"
             ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
           /></a>
         </div>
-        <ul class="links">
-          <li><a href="#">Apply</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">AMIMUN Club</a></li>
-          <li><a href="#">Resources</a></li>
-        </ul>
+        <div class="menu-bar">
+          <ul>
+            <li>
+              Apply <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li><a href="./forms/delegate.html">Delegate Application</a></li>
+                  <li><a href="./forms/international.html">International Press Application</a></li>
+                </ul>
+              </div>
+            </li>
+            <li>Gallery</li>
+            <li>Join Club</li>
+            <li>Resources</li>
+          </ul>
+        </div>
       </nav>
 
       <div class="header-section">
@@ -51,7 +66,7 @@
           Amity International Model United Nations<br />
         </h2>
         <div class="content">
-          <p class="header-text">
+          <h3 class="header-text theme-eng">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -66,7 +81,7 @@
             AMIMUN abides by the Preamble to the Charter of the United Nations:
             “To practice tolerance and live together in peace with one another
             as good neighbours”.
-          </p>
+          </h3>
         </div>
       </div>
 
@@ -108,53 +123,41 @@
         </div>
 
         <div class="content">
-          <h1 class="text">Absolute Commitment</h1>
+          <h1 class="text">Creativity & Innovation</h1>
           <div class="img">
             <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
           </div>
           <p class="text">
-            The Secretariat of Amity International Model United Nations
-            Conference consists of people who have consistently proven
-            themselves as hardworking, committed, and knowledgeable. Each person
-            is selected ensuring, AMIMUN's ideals are upheld and executed with
-            the utmost dedication. The secretariat ensures the smooth running of
-            all the committees while maintaining the highest level of
-            hospitality. Thus, we remain committed to the promise of quality and
-            guarantee an enriching experience.
+            Amity University strives to promote creativity in terms of
+            education. We believe in the overall development of students through
+            participation in various disciplines and activities.
           </p>
         </div>
 
         <div class="content">
-          <h1 class="text">Absolute Commitment</h1>
+          <h1 class="text">Brush Up Ingenuity</h1>
           <div class="img">
             <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
           </div>
           <p class="text">
-            The Secretariat of Amity International Model United Nations
-            Conference consists of people who have consistently proven
-            themselves as hardworking, committed, and knowledgeable. Each person
-            is selected ensuring, AMIMUN's ideals are upheld and executed with
-            the utmost dedication. The secretariat ensures the smooth running of
-            all the committees while maintaining the highest level of
-            hospitality. Thus, we remain committed to the promise of quality and
-            guarantee an enriching experience.
+            AMIMUN has successfully created a platform where delegates have had
+            the option to master and refine their strategic abilities. The
+            E-edition AMIMUN will encourage the manner of thinking to create
+            solutions for some grave world issues.
           </p>
         </div>
 
         <div class="content">
-          <h1 class="text">Absolute Commitment</h1>
+          <h1 class="text">Engaging & Paramount Motions</h1>
           <div class="img">
             <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
           </div>
           <p class="text">
-            The Secretariat of Amity International Model United Nations
-            Conference consists of people who have consistently proven
-            themselves as hardworking, committed, and knowledgeable. Each person
-            is selected ensuring, AMIMUN's ideals are upheld and executed with
-            the utmost dedication. The secretariat ensures the smooth running of
-            all the committees while maintaining the highest level of
-            hospitality. Thus, we remain committed to the promise of quality and
-            guarantee an enriching experience.
+            The AMIMUN fraternity brings forth the most engaging motions aimed
+            to facilitate the highest quality of debate. Deliberation on
+            challenging global issues will sharpen the members with the
+            learnings of the United Nations and assist them with understanding
+            the current world request.
           </p>
         </div>
       </div>
@@ -164,110 +167,124 @@
 
     <div class="header-section">
       <h2 class="header theme">
-        Amity International Model United Nations<br />
+        Amity University
+        <br />
       </h2>
       <div class="content">
-        <p class="header-text">
-          The first e-Edition of Amity International Model United Nations is a
-          simulation of the United Nations spanning over two days. At AMIMUN,
-          delegates gain profound knowledge of diplomacy, global relations, and
-          the inner workings of the United Nations. Through the past nine
-          editions, AMIMUN has set a standard of MUNs throughout the Nation with
-          its innovative themes. To continue the same legacy, the first
-          e-Edition of AMIMUN aims to create a platform where deliberation on
-          issues that address global problems and drafting resolutions will
-          enhance critical thinking, public speaking, and leadership skills.
-          Delegates will become conscious of the causes of conflict between
-          nations. Thus, AMIMUN follows through with the Preamble to the Charter
-          of the United Nations: "To practice tolerance and live together in
-          peace with one another as good neighbours”.
+        <p class="header-text theme-eng">
+          <b>Our Vision</b> is to build the country by fortifying the general
+          public through providing collective, collaborative, teaching; so as to
+          be the worldwide leader in skill training and embodying our promise to
+          be the university where Modernity Blends with Tradition.<br />
+
+          <b>Our Mission</b> is to provide education, catering to all levels
+          across the ever-evolving sphere of modern events, developing frontier
+          areas of knowledge, learning, research and examination; building up
+          the general character of students. We not only create great experts
+          but well-rounded individuals. Our students understand and have respect
+          for human qualities, pride in their legacy and culture, can discern
+          what is right, and imbibe attributes of courage, conviction and of
+          action.
         </p>
       </div>
     </div>
 
     <div class="smooth-scroll-wrapper">
       <div class="content">
-        <h1 class="text">Absolute Commitment</h1>
+        <h1 class="text">Academic Excellence</h1>
         <div class="img">
           <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
         </div>
         <p class="text">
-          The Secretariat of Amity International Model United Nations Conference
-          consists of people who have consistently proven themselves as
-          hardworking, committed, and knowledgeable. Each person is selected
-          ensuring, AMIMUN's ideals are upheld and executed with the utmost
-          dedication. The secretariat ensures the smooth running of all the
-          committees while maintaining the highest level of hospitality. Thus,
-          we remain committed to the promise of quality and guarantee an
-          enriching experience.
+          Amity University strives for the uncompromising quality and highest
+          standard of excellence in teaching, learning, research, and
+          scholarship across various disciplines.
         </p>
       </div>
 
       <div class="content">
-        <h1 class="text">Absolute Commitment</h1>
+        <h1 class="text">Integrity & Ethics</h1>
         <div class="img">
           <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
         </div>
         <p class="text">
-          The Secretariat of Amity International Model United Nations Conference
-          consists of people who have consistently proven themselves as
-          hardworking, committed, and knowledgeable. Each person is selected
-          ensuring, AMIMUN's ideals are upheld and executed with the utmost
-          dedication. The secretariat ensures the smooth running of all the
-          committees while maintaining the highest level of hospitality. Thus,
-          we remain committed to the promise of quality and guarantee an
-          enriching experience.
+          Amity University upholds the highest ethical values, integrity and
+          professionalism, and an unwavering commitment to academic freedom,
+          transparency, and accountability.
         </p>
       </div>
 
       <div class="content">
-        <h1 class="text">Absolute Commitment</h1>
+        <h1 class="text">Diversity & Mutual Respect</h1>
         <div class="img">
           <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
         </div>
         <p class="text">
-          The Secretariat of Amity International Model United Nations Conference
-          consists of people who have consistently proven themselves as
-          hardworking, committed, and knowledgeable. Each person is selected
-          ensuring, AMIMUN's ideals are upheld and executed with the utmost
-          dedication. The secretariat ensures the smooth running of all the
-          committees while maintaining the highest level of hospitality. Thus,
-          we remain committed to the promise of quality and guarantee an
-          enriching experience.
+          Amity University nurtures an environment of safety, trust & mutual
+          respect and embeds equality & diversity in its Strategy by ensuring
+          that the strategic plans are fair and inclusive.
         </p>
       </div>
 
       <div class="content">
-        <h1 class="text">Absolute Commitment</h1>
+        <h1 class="text">Expanding Horizons of Knowledge</h1>
         <div class="img">
           <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
         </div>
         <p class="text">
-          The Secretariat of Amity International Model United Nations Conference
-          consists of people who have consistently proven themselves as
-          hardworking, committed, and knowledgeable. Each person is selected
-          ensuring, AMIMUN's ideals are upheld and executed with the utmost
-          dedication. The secretariat ensures the smooth running of all the
-          committees while maintaining the highest level of hospitality. Thus,
-          we remain committed to the promise of quality and guarantee an
-          enriching experience.
+          Amity University is driven by research and innovation and ensures
+          continuous engagement in scholarly activities when in pursuit of
+          change, creativity, and excellence.
         </p>
       </div>
 
       <div class="content">
-        <h1 class="text">Absolute Commitment</h1>
+        <h1 class="text">Shared Governance</h1>
         <div class="img">
           <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
         </div>
         <p class="text">
-          The Secretariat of Amity International Model United Nations Conference
-          consists of people who have consistently proven themselves as
-          hardworking, committed, and knowledgeable. Each person is selected
-          ensuring, AMIMUN's ideals are upheld and executed with the utmost
-          dedication. The secretariat ensures the smooth running of all the
-          committees while maintaining the highest level of hospitality. Thus,
-          we remain committed to the promise of quality and guarantee an
-          enriching experience.
+          Amity University encourages shared decision-making through a process
+          that rests upon collaborative consultation, open flow of information,
+          diverse involvement, and collective deliberations of all stakeholders.
+        </p>
+      </div>
+
+      <div class="content">
+        <h1 class="text">Social Responsibility</h1>
+        <div class="img">
+          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+        </div>
+        <p class="text">
+          Amity University creates and nurtures an inclusive environment where
+          everyone can develop to their full potential and contribute to the
+          interest of society as a whole.
+        </p>
+      </div>
+
+      <div class="content">
+        <h1 class="text">Environmental Responsibility</h1>
+        <div class="img">
+          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+        </div>
+        <p class="text">
+          Amity University is acutely aware of its environmental
+          responsibilities and embraces principle of sustainable development to
+          ensure that any adverse environmental impact of its activities is
+          minimized.
+        </p>
+      </div>
+
+      <div class="content">
+        <h1 class="text">Service</h1>
+        <div class="img">
+          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+        </div>
+        <p class="text">
+          Amity University seeks to serve the diverse, personal and professional
+          development needs of its constituents and encourage the habit of
+          engagement, caring, and civic responsibility by emphasizing a
+          connection between service, excellence, and career growth.
         </p>
       </div>
     </div>
