--- a/committes.html
+++ b/committes.html
@@ -5,102 +5,314 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/9cfd8f728d.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="committes.css" />
-    <title>AMIMUN'22 | Committes</title>
+
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./committes.css" />
+    <title>AMIMUN'22 | Committees</title>
   </head>
   <body>
     <div id="back">
-      <nav>
-        <div class="links">
-          <a href="/index.html">Home</a><a href="/committes.html">Committes</a>
+      <nav id="nav">
+        <div class="menu-bar">
+          <ul>
+            <li><a href="./about.html">About</a></li>
+            <li>
+              Our Team <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li>
+                    <a href="./our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./our-team/advisory-board.html">Advisory Board</a>
+                  </li>
+                  <li>
+                    <a href="./our-team/secretariate.html">Secretariat</a>
+                  </li>
+                  <li>
+                    <a href="./our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="./messages.html">Messages</a></li>
+            <li><a href="./committes.html">Committees</a></li>
+          </ul>
         </div>
         <div id="logo">
-          <img src="./assets/logo.svg" alt="AMIMUN logo" srcset="" />
-          <p>AMIMUN 2022</p>
+          <a href="./index.html"
+            ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
+          /></a>
         </div>
-        <div class="links"><a href="#">Pricing</a><a href="#">About</a></div>
+        <div class="menu-bar">
+          <ul>
+            <li>
+              Apply <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li>
+                    <a href="./forms/delegate.html">Delegate Application</a>
+                  </li>
+                  <li>
+                    <a href="./forms/international.html"
+                      >International Press Application</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>Gallery</li>
+            <li>Join Club</li>
+            <li>Resources</li>
+          </ul>
+        </div>
       </nav>
-      <h2>Committes</h2>
 
-      <!--
-  Please note: this code is in no way ready to be used as is in production on your website. It will need to be adapted to be cross browser compliant & accessible. I just wanted to share how one might go about this effect with CSS & JS and no other dependencies
--->
-<div class="container margin-top">
-  <div class="card-column column-0">
-    <div class="card card-color-0 solid">
-      <div class="border"></div>
-      <img src="1.png" />
-      <h1 class="gray-text">United Nations General Assembly</h1>
-    </div>
-    <div class="card card-color-2 solid">
-      <div class="border"></div>
-      <img src="2.png" />
-      <h1 class="gray-text">World Health Assembly</h1>
-    </div>
-    <div class="card card-color-5 solid">
-      <div class="border"></div>
-      <img src="6.png" />
-      <h1 class="gray-text">All India Political Parties Meet</h1>
-    </div>
-  </div>
-  <div class="card-column column-1">
-    <div class="card card-color-1 solid">
-      <div class="border"></div>
-      <img src="4.png" />
-      <h1 class="gray-text">United Nations Commission on the Status of Women</h1>
-    </div>
-    <div class="card card-color-3 solid">
-      <div class="border"></div>
-      <img src="5.png" />
-      <h1 class="gray-text">United Nations Human Right Council</h1>
-    </div>
-  </div>
-  <div class="card-column column-2">
-    <div class="card card-color-1 solid">
-      <div class="border"></div>
-      <img src="4.png" />
-      <h1 class="gray-text">International Press Corps</h1>
-    </div>
-    <div class="card card-color-4 solid">
-      <div class="border"></div>
-      <img src="3.png" />
-      <h1 class="gray-text">Counter Terrorism Committee</h1>
-    </div>
-  </div>
+      <div class="header-section">
+        <h2 class="header theme">Committees<br /></h2>
+      </div>
+      <div class="grid">
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
 
-</div>
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
 
-<div id="cover" class="cover"></div>
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
 
-<div id="open-content" class="open-content">
-  <a href="#" id="close-content" class="close-content"><span class="x-1"></span><span class="x-2"></span></a>
-  <img id="open-content-image" src="" />
-  <div class="text" id="open-content-text">
-  </div>
-</div>
-</div>
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
+
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
+
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
+
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
+
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
+
+        <div class="card-container">
+          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+          <div class="card-icon">
+            <img src="./assets/un-white.png" alt="" />
+          </div>
+          <div class="preview-text">United Nations General Assembly</div>
+          <div class="card-circle"></div>
+          <div class="text-wrapper">
+            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
+            &mdash; UNGA &mdash; Aquisition
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr />
     <footer>
       <div class="footer-content">
-          <h3>code opacity</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iste corrupti doloribus odio sed!</p>
-          <ul class="socials">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-          </ul>
+        <div class="content-one">
+          <h3>Conference Information</h3>
+
+          <p>
+            January 20-23, 2022<br />
+            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+          </p>
+
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
+            width="600"
+            height="200"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="content-two">
+          <h3>Contact Us</h3>
+
+          <div class="contact">
+            <p><b>Shubhangi Thakur</b>, Secretary General</p>
+            <a href="tel:+91 87006 59269">+91 87006 59269</a><br />
+            <a href="mailto: sgamimun@gmail.com">sgamimun@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Rohan Nagpal</b>, Deputy Secretary General</p>
+            <a href="tel:+91 9599 441919">+91 9599 441919</a><br />
+            <a href="mailto: dsgamimun@gmail.com">dsgamimun@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
+            <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
+            <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
+            <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
+            <a href="mailto: chirag02.sharma@gmail.com"
+              >chirag02.sharma@gmail.com</a
+            >
+          </div>
+        </div>
       </div>
       <div class="footer-bottom">
-          <p>copyright &copy;2020 Amity University.</p>
+        <ul class="socials">
+          <li>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-google-plus"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+          </li>
+        </ul>
+        <p>copyright &copy;2020 Amity University.</p>
       </div>
-  </footer>
+    </footer>
+    <script>
+      var $cursor = $(".cursor"),
+        $overlay = $(".project-overlay");
 
+      function moveCircle(e) {
+        TweenLite.to($cursor, 0.5, {
+          css: {
+            left: e.pageX,
+            top: e.pageY,
+          },
+          delay: 0.03,
+        });
+      }
+
+      $(".p-1").hover(function () {
+        $(".cursor").css({ "background-image": "url(image-1.jpg)" });
+      });
+      $(".p-2").hover(function () {
+        $(".cursor").css({ "background-image": "url(image-2.jpg)" });
+      });
+      $(".p-3").hover(function () {
+        $(".cursor").css({ "background-image": "url(image-3.jpg)" });
+      });
+      $(".p-4").hover(function () {
+        $(".cursor").css({ "background-image": "url(image-4.jpg)" });
+      });
+
+      var flag = false;
+      $($overlay).mousemove(function () {
+        flag = true;
+        TweenLite.to($cursor, 0.3, { scale: 1, autoAlpha: 1 });
+        $($overlay).on("mousemove", moveCircle);
+      });
+
+      $($overlay).mouseout(function () {
+        flag = false;
+        TweenLite.to($cursor, 0.3, { scale: 0.1, autoAlpha: 0 });
+      });
+    </script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
       integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
@@ -113,7 +325,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="./main.js"></script>
-    <script src="./committes.js"></script>
   </body>
 </html>
