added committess and corresponding links

--- a/about.html
+++ b/about.html
@@ -27,10 +27,22 @@
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
-                  <li><a href="./our-team/guiding-light.html">Our Guiding Light</a></li>
-                  <li><a href="./our-team/advisory-board.html">Advisory Board</a></li>
-                  <li><a href="./our-team/secretariate.html">Secretariat</a></li>
-                  <li><a href="./our-team/org-committee.html">Organising Committee</a></li>
+                  <li>
+                    <a href="./our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./our-team/advisory-board.html">Advisory Board</a>
+                  </li>
+                  <li>
+                    <a href="./our-team/secretariate.html">Secretariat</a>
+                  </li>
+                  <li>
+                    <a href="./our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
+                  </li>
                 </ul>
               </div>
             </li>
@@ -40,7 +52,7 @@
         </div>
         <div id="logo">
           <a href="./index.html"
-            ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
+            ><img src="./assets/logo.svg" alt="AMIMUN logo" srcset=""
           /></a>
         </div>
         <div class="menu-bar">
@@ -49,8 +61,14 @@
               Apply <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
-                  <li><a href="./forms/delegate.html">Delegate Application</a></li>
-                  <li><a href="./forms/international.html">International Press Application</a></li>
+                  <li>
+                    <a href="./forms/delegate.html">Delegate Application</a>
+                  </li>
+                  <li>
+                    <a href="./forms/international.html"
+                      >International Press Application</a
+                    >
+                  </li>
                 </ul>
               </div>
             </li>
