--- a/committes.html
+++ b/committes.html
@@ -53,7 +53,7 @@
         </div>
         <div id="logo">
           <a href="./index.html"
-            ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
+            ><img src="./assets/logo.svg" alt="AMIMUN logo" srcset=""
           /></a>
         </div>
         <div class="menu-bar">
@@ -81,125 +81,139 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Committees<br /></h2>
+        <h2 class="header theme">Our Committees<br /></h2>
       </div>
       <div class="grid">
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/unhr.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/unhrc-white-1.png" alt="" />
+            </div>
+            <div class="preview-text">United Nations Human Rights Council</div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              UNHRC &mdash; UNHRC &mdash; UNHRC &mdash; UNHRC &dash; UNHRC &mdash;
+              UNHRC &mdash; UNHRC &mdash; UNHRC
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/unga.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/Unga.png" alt="" />
+            </div>
+            <div class="preview-text">United Nations General Assembly - II</div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash;
+              UNGA &mdash; UNGA &mdash; UNGA
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/unsc.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/unsc.png" alt="" />
+            </div>
+            <div class="preview-text">United Nations Security Council</div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              UNSC &mdash; UNSC &mdash; UNSC &mdash; UNSC &dash; UNSC &mdash;
+              UNSC &mdash; UNSC &mdash; UNSC
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/unfccc.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/unfccc-1.png" alt="" />
+            </div>
+            <div class="preview-text">
+              United Nations Framework Convention for Climate Change
+            </div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              UNFCCC &mdash; UNFCCC &mdash; UNFCCC &mdash; UNFCCC &dash; UNFCCC
+              &mdash; UNFCCC &mdash; UNFCCC &mdash; UNFCCC
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/uncsw.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/uncsw.png" alt="" />
+            </div>
+            <div class="preview-text">
+              United Nations Commission on Status of Women
+            </div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              UNCSW &mdash; UNCSW &mdash; UNCSW &mdash; UNCSW &dash; UNCSW
+              &mdash; UNCSW &mdash; UNCSW &mdash; UNCSW
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/who.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/who.png" alt="" />
+            </div>
+            <div class="preview-text">World Health Organisation</div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              WHO &mdash; WHO &mdash; WHO &mdash; WHO &dash; WHO &mdash; WHO
+              &mdash; WHO &mdash; WHO
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/icj.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/icj.png" alt="" />
+            </div>
+            <div class="preview-text">International Court of Justice</div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              ICJ &mdash; ICJ &mdash; ICJ &mdash; ICJ &dash; ICJ &mdash; ICJ
+              &mdash; ICJ &mdash; ICJ
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/na.html">
+          <div class="card-container">
+            <div class="card-icon">
+              <img src="./assets/niti.png" alt="" />
+            </div>
+            <div class="preview-text">NITI Aayog</div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              NITI &mdash; NITI &mdash; NITI &mdash; NITI &dash; NITI &mdash; NITI &mdash;
+              NITI &mdash; NITI
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
 
-        <div class="card-container">
-          <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
-          <div class="card-icon">
-            <img src="./assets/un-white.png" alt="" />
+        <a href="./committees/ip.html">
+          <div class="card-container">
+            <div class="plus-icon"><ion-icon name="add-sharp"></ion-icon></div>
+            <div class="card-icon">
+              <img src="./assets/ip-white.png" alt="" />
+            </div>
+            <div class="preview-text">International Press</div>
+            <div class="card-circle"></div>
+            <div class="text-wrapper">
+              IP &mdash; IP &mdash; IP &mdash; IP &dash; IP &mdash; IP &mdash;
+              IP &mdash; IP
+            </div>
           </div>
-          <div class="preview-text">United Nations General Assembly</div>
-          <div class="card-circle"></div>
-          <div class="text-wrapper">
-            UNGA &mdash; UNGA &mdash; UNGA &mdash; UNGA &dash; UNGA &mdash; UNGA
-            &mdash; UNGA &mdash; Aquisition
-          </div>
-        </div>
+        </a>
       </div>
     </div>
 
