--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <div id="back">
       <p class="banner">
-        Registration for AMIMUN 2022 has opened. <a href="#">Register now</a> !
+        Registration for AMIMUN 2022 has opened.<br /><br />  
+        Saturday, January 22nd, to Sunday, January 23rd, 2022.
+        <a href="#">Register now</a> !
       </p>
       <nav>
         <div class="menu-bar">
@@ -29,10 +31,22 @@
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
-                  <li><a href="./our-team/guiding-light.html">Our Guiding Light</a></li>
-                  <li><a href="./our-team/advisory-board.html">Advisory Board</a></li>
-                  <li><a href="./our-team/secretariate.html">Secretariat</a></li>
-                  <li><a href="./our-team/org-committee.html">Organising Committee</a></li>
+                  <li>
+                    <a href="./our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./our-team/advisory-board.html">Advisory Board</a>
+                  </li>
+                  <li>
+                    <a href="./our-team/secretariate.html">Secretariat</a>
+                  </li>
+                  <li>
+                    <a href="./our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
+                  </li>
                 </ul>
               </div>
             </li>
@@ -42,7 +56,7 @@
         </div>
         <div id="logo">
           <a href="./index.html"
-            ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
+            ><img src="./assets/logo.svg" alt="AMIMUN logo" srcset=""
           /></a>
         </div>
         <div class="menu-bar">
@@ -51,14 +65,20 @@
               Apply <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
-                  <li><a href="./forms/delegate.html">Delegate Application</a></li>
-                  <li><a href="./forms/international.html">International Press Application</a></li>
+                  <li>
+                    <a href="./forms/delegate.html">Delegate Application</a>
+                  </li>
+                  <li>
+                    <a href="./forms/international.html"
+                      >International Press Application</a
+                    >
+                  </li>
                 </ul>
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
-            <li>Resources</li>
+            <li>AMIMUN Club</li>
+            <li><a href="./resources.html"></a> Resources</li>
           </ul>
         </div>
       </nav>
@@ -77,9 +97,9 @@
         <div id="videoplayer">
           <div class="videoplayer-center-text">
             <h1 class="center-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
-              vero?
+              January 22nd - January 23rd, 2022
             </h1>
+            <p id="demo"></p>
             <div class="btn">REGISTER</div>
           </div>
           <video
@@ -97,7 +117,7 @@
         </div>
         <div id="six" class="imgcontainer"></div>
       </div>
-      <h2 class="heading">A Message from Secratary General</h2>
+      <h2 class="heading">Message from Secratary General</h2>
       <div class="section">
         <div class="img-text-container">
           <div id="sec-gen-img"></div>
@@ -138,8 +158,8 @@
           behalf of the secretariat, I extend a warm invitation to all delegates
           and hope this conference will be as productive for you as an
           individual, and as a delegate. Remember, “Preserverantia Omnia
-          Vincit”- perseverance conquers all things. I wish you all the very
-          best. <br />
+          Vincit”- perseverance conquers all. I wish you all the very best.
+          <br />
           Sincerely,<br />
           Shubhangi Thakur<br />
           Secretary-General<br />
@@ -214,7 +234,7 @@
           <h3>Conference Information</h3>
 
           <p>
-            January 20-23, 2022<br />
+            January 22-23, 2022<br />
             Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
           </p>
 
@@ -252,7 +272,7 @@
             <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
             <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
             <a href="mailto: chirag02.sharma@gmail.com"
-              >chirag02.sharma@gmail.com</a
+              >infoamimun22@gmail.com</a
             >
           </div>
         </div>
@@ -275,7 +295,7 @@
             <a href="#"><i class="fa fa-linkedin-square"></i></a>
           </li>
         </ul>
-        <p>copyright &copy;2020 Amity University.</p>
+        <p>copyright &copy;2022 Amity University</p>
       </div>
     </footer>
     <script>
