--- a/messages.html
+++ b/messages.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about.css" />
-    <title>AMIMUN'22 | Home</title>
+    <title>AMIMUN'22 | Messages</title>
   </head>
   <body>
     <div id="back">
@@ -52,7 +52,7 @@
         </div>
         <div id="logo">
           <a href="./index.html"
-            ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
+            ><img src="./assets/logo.svg" alt="AMIMUN logo" srcset=""
           /></a>
         </div>
         <div class="menu-bar">
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>AMIMUN Club</li>
+            <li>Join Club</li>
             <li>Resources</li>
           </ul>
         </div>
@@ -126,7 +126,7 @@
       </div>
 
       <div class="header-section">
-        <h2 class="header theme">Message from Mentor<br /></h2>
+        <h2 class="header theme">Message from Chairperson<br /></h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
           <!-- <h3 class="header-text theme-eng">
@@ -149,7 +149,7 @@
       </div>
 
       <div class="header-section">
-        <h2 class="header theme">Message from Chairperson<br /></h2>
+        <h2 class="header theme">Message from Co-Chairperson<br /></h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
           <!-- <h3 class="header-text theme-eng">
