--- a/committees/ip.html
+++ b/committees/ip.html
@@ -22,22 +22,26 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="../about.html">About</a></li>
+            <li><a href="..//about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -76,25 +80,27 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Secretariat<br /></h2>
+        <h2 class="header theme">International Press <br /></h2>
         <div class="content">
-          <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3> -->
+          <h3 class="header-text theme-eng">
+            World democracies believe reporting to be the fourth pillar. It
+            empowers everyone, regardless of their social station, to express
+            their opinions. It is an instrument for establishing clarity of
+            perception for the public and, in some cases, a revolutionary
+            beacon. Reporting is the ultimate freedom, allowing people access to
+            facts and shaping their perceptions. Journalism in the twenty-first
+            century is an instrument for revolution and the dissemination of
+            truth, opposing those who seek to silence the people's voice. The
+            press is one of the world's most significant pillars, capable of
+            facilitating global debate and discussion.<br />
+
+            Reporting during AMIMUN'22 will necessitate a careful and thorough
+            methodology that emphasises not just the substantive policy changes
+            that occur, but also how those changes are implemented in the real
+            world. The Press Reporters must ensure that the truth is revealed
+            and that democratised access to the working of AMIMUN'22's many
+            organs is ensured, as well as that the press is open to all.
+          </h3>
         </div>
       </div>
     </div>
@@ -261,6 +267,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
