--- a/committees/na.html
+++ b/committees/na.html
@@ -22,22 +22,26 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="../about.html">About</a></li>
+            <li><a href="..//about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -76,25 +80,34 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Secretariat<br /></h2>
+        <h2 class="header theme">
+          NITI Aayog (National Institution for Transforming India)<br />
+        </h2>
         <div class="content">
-          <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3> -->
+          <h3 class="header-text theme-eng">
+            The NITI (National Institution for Transforming India) Aayog is a
+            policy think tank of the Government of India that was established to
+            achieve sustainable development goals through cooperative federalism
+            by encouraging state governments in India to participate in economic
+            policymaking through a bottom-up approach. The Chief Ministers of
+            all States and Union Territories with legislatures, as well as
+            Lieutenant Governors from other Union Territories, make up the
+            Governing Council of NITI Aayog, which is chaired by the Hon'ble
+            Prime Minister. Its primary goal is to evolve a shared vision of
+            national development priorities, sectors, and strategies with the
+            active participation of states considering national objectives, as
+            well as to foster cooperative federalism continuously through
+            structured support initiatives and mechanisms with the states,
+            recognising that strong states make a strong nation.<br />
+
+            The committee seeks to reflect reality by providing a forum for the
+            resolution of cross-sectoral and cross-departmental issues to
+            expedite the implementation of the development agenda. Delegates
+            representing members of a wide set of Legislative institutions and
+            political standings will be required to engage in additional
+            discussion as needed to further the execution of the national
+            development plan, as well as the committee's prior agenda.
+          </h3>
         </div>
       </div>
     </div>
@@ -261,6 +274,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
