--- a/committees/unfccc.html
+++ b/committees/unfccc.html
@@ -22,22 +22,26 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="../about.html">About</a></li>
+            <li><a href="..//about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -76,29 +80,18 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Secretariat<br /></h2>
+        <h2 class="header theme">The United Nations Framework Convention on Climate Change<br /></h2>
         <div class="content">
-          <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3> -->
+          <h3 class="header-text theme-eng">
+            The United Nations Framework Convention on Climate Change (UNFCCC)  is the UN organization that is responsible for assisting the global response to the threat of climate change.  The Convention is the parent instrument of the 2015 Paris Agreement and has nearly universal membership (197 Parties). The Paris Agreement's major goal is to prevent world average temperature rise this century as near to 1.5 degrees Celsius above pre-industrial levels as possible. The UNFCCC is also the parent treaty of the Kyoto Protocol, which was signed in 1997. <br>
+
+            The committee is known to provide technical assistance in the analysis and assessment of climate change data submitted by Parties, as well as in the execution of the Kyoto processes. It also manages the Paris Agreement's registry of Nationally Determined Contributions (NDCs), which is an important part of the agreement's implementation. They also organise and assist two to four negotiation sessions per year, the largest and most important of which is the Conference of the Parties, which takes place every year in different parts of the world. It is the largest annual United Nations meeting, with roughly 25,000 people in attendance on average.
+            
+          </h3>
         </div>
       </div>
-    </div>
 
+     
     <hr />
     <footer>
       <div class="footer-content">
@@ -261,6 +254,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
