--- a/committees/unga.html
+++ b/committees/unga.html
@@ -22,22 +22,26 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="../about.html">About</a></li>
+            <li><a href="..//about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -76,29 +80,18 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Secretariat<br /></h2>
+        <h2 class="header theme">United Nations General Assembly            <br /></h2>
         <div class="content">
-          <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3> -->
+          <h3 class="header-text theme-eng">
+            The United Nations General Assembly (UNGA) is the UN's principal policy-making organ. It is comprised of all Member States and provides a unique platform for multilateral discussion of the whole range of international issues covered by the United Nations Charter. Each of the United Nations' 193 member states gets one vote.  Following the COVID-19 pandemic, the UN General Assembly has been carrying out its job since 2020 using creative methods to ensure business continuity and reduce illness spread. Specific examples include the usage of virtual platforms for meetings and the implementation of e-voting via a procedure for decision-making. <br>
+
+            Delegates will be asked to identify the flaws and changes that are needed to adapt these rules to the fast-paced environment. Members of the United Nations General Assembly work toward a common aim of concentrating global action as never before to ensure peace and development. The goal of this simulation is to replicate the operations of the UN General Assembly's second committee, ECOFIN. It primarily addresses macroeconomic policy issues, as well as financing for development, sustainable development, globalisation and interdependence, poverty eradication, operational activities for development, agriculture development, food security and nutrition, and information and communications technologies for development, as well as global partnerships. 
+            
+          </h3>
         </div>
       </div>
-    </div>
 
+     
     <hr />
     <footer>
       <div class="footer-content">
@@ -261,6 +254,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
