--- a/committees/unhr.html
+++ b/committees/unhr.html
@@ -22,22 +22,26 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="../about.html">About</a></li>
+            <li><a href="..//about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -76,25 +80,33 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Secretariat<br /></h2>
+        <h2 class="header theme">
+          United Nations Human Rights Council (UNHRC) <br />
+        </h2>
         <div class="content">
-          <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3> -->
+          <h3 class="header-text theme-eng">
+            The Human Rights Council is an intergovernmental body within the
+            United Nations system comprised of 47 states that are responsible
+            for the promotion and protection of all human rights worldwide. It
+            is capable of debating any thematic human rights concerns and
+            circumstances that arise during the year. It has its meetings in the
+            United Nations Office in Geneva. The Council is comprised of 47
+            United Nations Member States elected by the UN General Assembly. The
+            defunct United Nations Commission on Human Rights was succeeded by
+            the Human Rights Council.<br />
+
+            The Human Rights Council also collaborates with the UN Special
+            Procedures created by the former Human Rights Commission and now
+            assumed by the Council. These are made up of special rapporteurs,
+            special representatives, independent experts, and working groups who
+            monitor, investigate, advise, and publicly report on certain
+            thematic concerns or human rights situations. Delegates to the
+            council shall be held to the highest standards to promote and
+            preserve human rights. As a result of the committee's discussions,
+            the Council may issue resolutions urging states to take action to
+            prevent human rights breaches and to preserve the council's
+            principles.
+          </h3>
         </div>
       </div>
     </div>
@@ -261,6 +273,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
