--- a/committees/unsc.html
+++ b/committees/unsc.html
@@ -22,22 +22,26 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="../about.html">About</a></li>
+            <li><a href="..//about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -76,25 +80,31 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Secretariat<br /></h2>
+        <h2 class="header theme">United Nations Security Council <br /></h2>
         <div class="content">
-          <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3> -->
+          <h3 class="header-text theme-eng">
+            The United Nations Security Council (UNSC) is one of the United
+            Nations (UN) six primary organs, tasked with ensuring international
+            peace and security, recommending new UN members to the General
+            Assembly, and approving any amendments to the UN Charter. The
+            Security Council oversees evaluating whether a threat to peace or an
+            act of aggression exists. It encourages the parties to a dispute to
+            settle it peacefully and suggests techniques of adjustment or terms
+            of a settlement. The council's five permanent members and ten
+            elected members convene regularly to analyse worldwide security
+            risks such as civil wars, natural disasters, arms proliferation, and
+            terrorism.
+            <br />
+            The simulation of this committee will focus primarily on
+            investigating any dispute or situation that may lead to
+            international friction, and as such, the delegates will be tasked
+            with deliberating on current issues, determining the existence of a
+            threat to the peace or act of aggression, and recommending what
+            action should be taken. The committee's mandate allows it to monitor
+            and facilitate relevant resolutions. Delegates are expected to
+            elaborate on effective techniques for carrying out the United
+            Nations' trusteeship functions in "strategic areas."
+          </h3>
         </div>
       </div>
     </div>
@@ -261,6 +271,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
