--- a/committees/who.html
+++ b/committees/who.html
@@ -22,22 +22,26 @@
       <nav>
         <div class="menu-bar">
           <ul>
-            <li><a href="../about.html">About</a></li>
+            <li><a href="..//about.html">About</a></li>
             <li>
               Our Team <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -76,29 +80,18 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Secretariat<br /></h2>
+        <h2 class="header theme">World Health Organization(WHO)            <br /></h2>
         <div class="content">
-          <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3> -->
+          <h3 class="header-text theme-eng">
+            The World Health Organization (WHO) is a United Nations organization that unites nations, partners, and people to promote health, keep the world safe, and assist the vulnerable - so that everyone, everywhere can achieve the best possible health. The World Health Organization (WHO) is in charge of global efforts to expand universal health coverage. They direct and coordinate the global response to health crises. WHO also supports better lifestyles. Their Triple Billion targets establish an ambitious strategy for the globe to achieve good health for all through the implementation of science-based policies and programmes. WHO seeks to address the elimination and eradication of high-impact communicable illnesses, the prevention of noncommunicable diseases, and the correct focus on primary health care to increase access to quality vital services through their efforts.<br>
+
+            The delegates participating in this Committee's simulation will be required to address issues affecting the existence of the human race and provide solutions to the nations. The delegates will be responsible for passing on ideas and guidance on global health issues, as well as working for long-term finance and financial protection, particularly for the Least Economically Developed Nations.
+            
+          </h3>
         </div>
       </div>
-    </div>
 
+     
     <hr />
     <footer>
       <div class="footer-content">
@@ -261,6 +254,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
