--- a/forms/delegate.html
+++ b/forms/delegate.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/9cfd8f728d.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,15 +20,68 @@
   <body>
     <div id="back">
       <nav>
-        <div class="links">
-          <a href="/index.html">Home</a><a href="/committes.html">Committes</a>
+        <div class="menu-bar">
+          <ul>
+            <li><a href="..//about.html">About</a></li>
+            <li>
+              Our Team <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li>
+                    <a href="../our-team/guiding-light.html"
+                      >Our Guiding Light</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../our-team/advisory-board.html">Advisory Board</a>
+                  </li>
+                  <li>
+                    <a href="../our-team/secretariate.html">Secretariat</a>
+                  </li>
+                  <li>
+                    <a href="../our-team/org-committee.html"
+                      >Organising Committee</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="../messages.html">Messages</a></li>
+            <li><a href="../committes.html">Committees</a></li>
+          </ul>
         </div>
         <div id="logo">
-          <img src="../assets/logo.png" alt="AMIMUN logo" srcset="" />
+          <a href="../index.html"
+            ><img src="../assets/logo.svg" alt="AMIMUN logo" srcset=""
+          /></a>
         </div>
-        <div class="links"><a href="#">Pricing</a><a href="#">About</a></div>
+        <div class="menu-bar">
+          <ul>
+            <li>
+              Apply <i class="fas fa-chevron-down"></i>
+              <div class="sub-menu-1">
+                <ul>
+                  <li>
+                    <a href="../forms/delegate.html">Delegate Application</a>
+                  </li>
+                  <li>
+                    <a href="../forms/international.html"
+                      >International Press Application</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>Gallery</li>
+            <li>Join Club</li>
+            <li>Resources</li>
+          </ul>
+        </div>
       </nav>
-      <h2>Delegate Application</h2>
+
+      <div class="header-section">
+        <h2 class="header theme">Delegate Application <br /></h2>
+      </div>
       <form class="form" action="javascript:void(0);">
         <div class="name">
           <div class="first-name">
@@ -174,8 +231,57 @@
         <input type="checkbox" name="confirm" id="" />
       </form>
     </div>
+    <hr />
     <footer>
       <div class="footer-content">
+        <div class="content-one">
+          <h3>Conference Information</h3>
+
+          <p>
+            January 20-23, 2022<br />
+            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+          </p>
+
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
+            width="600"
+            height="200"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="content-two">
+          <h3>Contact Us</h3>
+
+          <div class="contact">
+            <p><b>Shubhangi Thakur</b>, Secretary General</p>
+            <a href="tel:+91 87006 59269">+91 87006 59269</a><br />
+            <a href="mailto: sgamimun@gmail.com">sgamimun@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Rohan Nagpal</b>, Deputy Secretary General</p>
+            <a href="tel:+91 9599 441919">+91 9599 441919</a><br />
+            <a href="mailto: dsgamimun@gmail.com">dsgamimun@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
+            <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
+            <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
+            <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
+            <a href="mailto: chirag02.sharma@gmail.com"
+              >chirag02.sharma@gmail.com</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
         <ul class="socials">
           <li>
             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -187,14 +293,12 @@
             <a href="#"><i class="fa fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
           </li>
           <li>
             <a href="#"><i class="fa fa-linkedin-square"></i></a>
           </li>
         </ul>
-      </div>
-      <div class="footer-bottom">
         <p>copyright &copy;2020 Amity University.</p>
       </div>
     </footer>
