added resources and country matrix

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
             of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIUMUN have
+            knowledge of global relations. The past ten editions of AMIMUN have
             each continued to set the bar higher in terms of innovative themes
             and constructive debate; with this conference continuing the
             tradition. The second e-edition of AMIMUN shall endeavour to
@@ -359,19 +359,19 @@
       <div class="footer-bottom">
         <ul class="socials">
           <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/amitymun/"><i class="fa fa-facebook"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"><i class="fa fa-youtube"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://instagram.com/amimun22?utm_medium=copy_link"><i class="fa fa-instagram"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://www.linkedin.com/company/amimunconference"><i class="fa fa-linkedin-square"></i></a>
           </li>
         </ul>
         <p>copyright &copy;2020 Amity University.</p>
