--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   <body>
     <div id="back">
       <p class="banner">
-        Registration for AMIMUN 2022 has opened.<br /><br />  
-        Saturday, January 22nd, to Sunday, January 23rd, 2022.
-        <a href="#">Register now</a> !
+        Registration for AMIMUN 2022 has opened.
+        <a href="#"> <u>Register now</u> </a> !
       </p>
       <nav>
         <div class="menu-bar">
@@ -78,14 +77,16 @@
             </li>
             <li>Gallery</li>
             <li>AMIMUN Club</li>
-            <li><a href="./resources.html"></a> Resources</li>
+            <li><a href="./resources.html">Resources</a> </li>
           </ul>
         </div>
       </nav>
 
       <div class="header-section">
         <h2 class="header theme">Preserverantia Omnia Vincit<br /></h2>
-        <h3 class="theme-eng">Perseverance Conquers All <br /></h3>
+        <h3 class="theme-eng">
+          <b>January 22nd &mdash; January 23rd, 2022</b><br />
+        </h3>
       </div>
 
       <div id="main">
@@ -97,8 +98,13 @@
         <div id="videoplayer">
           <div class="videoplayer-center-text">
             <h1 class="center-text">
-              January 22nd - January 23rd, 2022
+              <i>
+                <span style="font-size: 80px">"</span>Perseverance doesn't
+                always mean winning and losing. Perseverance means showing up
+                and rising to the occasion and performing.</i
+              ><br />
             </h1>
+            <h3 class="quote">&mdash; Michael Chiesa</h3>
             <p id="demo"></p>
             <div class="btn">REGISTER</div>
           </div>
@@ -117,7 +123,7 @@
         </div>
         <div id="six" class="imgcontainer"></div>
       </div>
-      <h2 class="heading">Message from Secratary General</h2>
+      <h2 class="heading">Message from Secretary General</h2>
       <div class="section">
         <div class="img-text-container">
           <div id="sec-gen-img"></div>
@@ -280,19 +286,28 @@
       <div class="footer-bottom">
         <ul class="socials">
           <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/amitymun/"
+              ><i class="fa fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a
+              href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"
+              ><i class="fa fa-youtube"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://instagram.com/amimun22?utm_medium=copy_link"
+              ><i class="fa fa-instagram"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://www.linkedin.com/company/amimunconference"
+              ><i class="fa fa-linkedin-square"></i
+            ></a>
           </li>
         </ul>
         <p>copyright &copy;2022 Amity University</p>
