--- a/messages.html
+++ b/messages.html
@@ -224,19 +224,19 @@
       <div class="footer-bottom">
         <ul class="socials">
           <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/amitymun/"><i class="fa fa-facebook"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"><i class="fa fa-youtube"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://instagram.com/amimun22?utm_medium=copy_link"><i class="fa fa-instagram"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://www.linkedin.com/company/amimunconference"><i class="fa fa-linkedin-square"></i></a>
           </li>
         </ul>
         <p>copyright &copy;2020 Amity University.</p>
